--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
 
+<head>
+    <title></title>
+    <script type="text/javascript" src="libs/buzz.min.js"></script>
+    <script type="text/javascript" src="libs/gyronorm.complete.min.js"></script>
+</head>
+
+<body>
+    <script type="text/javascript" src="index.js"></script>
 </body>
+
 </html>
