--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title></title>
 	<script type="text/javascript" src="libs/buzz.min.js"></script>
-	<script type="text/javascript" src="libs/gyronorm.complete.min.js"></script>
+	<script type="text/javascript" src="libs/fulltilt.min.js"></script>
+	<!-- <script type="text/javascript" src="libs/gyronorm.complete.min.js"></script> -->
 </head>
 <body>
 	<script type="text/javascript" src="index.js"></script>
