--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <button id="startBTN" style="font-size: 250%;">[ 开始／START ]</button>
     <script type="text/javascript" src="index.js"></script>
 </body>
 
